other-cel/restrict-node-label-creation/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-node-label-creation
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
